# Gerenciador_de_tarefas

./: README.md  main.py  pyproject.toml
