[tool.poetry]
name = "Gerenciador_tarefas"
version = "0.1.0"
description = ""
authors = ["Pliffisson <pliffissongomes@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
PySimpleGUI = "^4.60.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
